<resources>
    <string name="app_name" translatable="false">HellsCore Kernel Manager</string>
    <string name="cpuCtl">CPU Control</string>
    <string name="gpuCtl">GPU Control</string>
    <string name="lcdCtl">LCD Control</string>
    <string name="touchCtl">Touch Control</string>
    <string name="soundCtl">Sound Control</string>
    <string name="miscCtl">Misc Controls</string>
    <string name="monitoring">Monitoring</string>
    <string name="profMan">Profile Manager</string>
    <string name="action_setOnBoot">Set on boot</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_apply">Apply</string>
    <string name="pref_category_cpu">CPU</string>
    <string name="pref_governor">Governor</string>
    <string name="pref_max_freq">Maximum frequency</string>
    <string name="pref_min_freq">Minimum frequency</string>
    <string name="pref_category_mpdec">MP-Decision / HotPlug</string>
    <string name="pref_msm_mpdecision">Enable MSM MPDecision</string>
    <string name="pref_msm_hotplug">Enable MSM Hotplug</string>
    <string name="pref_max_cores_online">Max cores online</string>
    <string name="pref_min_cores_online">Min cores online</string>
    <string name="pref_max_cores_susp">Max suspended cores</string>
    <string name="pref_screenoff_max">Screen-Off Max Freq</string>
    <string name="pref_screenoff_single_core">Screen-Off single core</string>
    <string name="pref_cores_boosted">Cores boosted on touch</string>
    <string name="pref_boost_duration">Boost lock duration</string>
    <string name="pref_touch_boost">Touch boost</string>
    <string name="pref_category_cstates">C-States</string>
    <string name="c0_state" translatable="false">C0 (WFI)</string>
    <string name="c1_state" translatable="false">C1 (RET)</string>
    <string name="c2_state" translatable="false">C2 (SPC)</string>
    <string name="c3_state" translatable="false">C3 (PC)</string>
    <string name="pref_category_voltages">Voltages</string>
    <string name="frequency">Frequency</string>
    <string name="voltage">Voltage</string>
    <string name="pref_category_gpu">GPU</string>
    <string name="pref_category_simple" translatable="false">Simple</string>
    <string name="pref_policy">Policy</string>
    <string name="pref_vdd_dig_low">VDD DIG LOW</string>
    <string name="pref_vdd_dig_normal">VDD DIG NORMAL</string>
    <string name="pref_vdd_dig_high">VDD DIG HIGH</string>
    <string name="pref_use_simple_gov">Use simple GPU governor</string>
    <string name="pref_simple_laziness">Laziness</string>
    <string name="pref_simple_ramp_thresh">Ramp up threshold</string>
    <string name="pref_category_config">Config</string>
    <string name="pref_dt2w">Double tap to wake</string>
    <string name="pref_s2w">Sweep to wake / Sweep to sleep</string>
    <string name="pref_s2d">Sweep to dim</string>
    <string name="pref_tw">Touch wake</string>
    <string name="pref_dt2w_feather">Double tap to wake feather radius</string>
    <string name="pref_dt2w_zone">Double tap to wake trigger zone</string>
    <string name="pref_tw_timeout">Touch wake timeout</string>
    <string name="pref_summary_dt2w">Double tap on the screen to wake the phone.</string>
    <string name="pref_summary_s2d">Swipe on the navigation bar to dim the screen.</string>
    <string name="pref_summary_s2w">
        Swipe on the screen from left to right to wake the phone or swipe on the navigation bar from right to left to lock the phone.
        Some kernels do not support s2w+s2s or s2s.
    </string>
    <string name="pref_summary_tw">When the screen locks wake the phone by touching the screen within the specified timeout.</string>
    <string name="pref_category_sndprofiles">Sound profiles</string>
    <string name="pref_category_tuning">Manual tuning</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="pref_hp_gain">Headphone Gain</string>
    <string name="pref_pa_gain">PowerAmp Gain</string>
    <string name="pref_spk_gain">Speaker Gain</string>
    <string name="pref_mic_gain">Microphone Gain</string>
    <string name="pref_camc_gain">Camcorder Gain</string>
    <string name="profile_stock">Stock</string>
    <string name="profile_quiet">Quiet</string>
    <string name="profile_loudness">Loudness</string>
    <string name="profile_quality">Quality</string>
    <string name="pref_category_profiles">Profiles</string>
    <string name="pref_category_kcal">KCal</string>
    <string name="pref_category_kgamma">KGamma</string>
    <string name="pref_category_brightness">Brightness</string>
    <string name="pref_active_profile">Active profile</string>
    <string name="pref_save_profile">Save current settings in a custom profile</string>
    <string name="pref_delete_profile">Delete an existing custom profile</string>
    <string name="pref_exp_brigthness">Exponential brightness</string>
    <string name="pref_max_brigthness">Maximum brightness</string>
    <string name="pref_min_brigthness">Minimum brightness</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="button_save">Save</string>
    <string name="profile_custom">Custom</string>
    <string name="message_name_empty">Profile name is empty</string>
    <string name="message_profiles_empty">No custom profiles found</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_specific">Kernel specific</string>
    <string name="pref_category_wakelocks">Wakelocks</string>
    <string name="pref_io_scheduler">I/O scheduler</string>
    <string name="pref_read_ahead_buffer">Read ahead buffer</string>
    <string name="pref_tcp_congestion">TCP congestion algorithm</string>
    <string name="pref_vibrator_amp">Vibrator amplitude</string>
    <string name="pref_msm_thermal_limit">MSM Thermal limit</string>
    <string name="pref_dynamic_fsync">Dynamic FSync</string>
    <string name="pref_fast_charge">Fast charge</string>
    <string name="pref_blx_limit">Battery life extender limit</string>
    <string name="pref_sensor_ind_wakelock">Sensor ind wakelock</string>
    <string name="pref_smb135x_wakelock">SMB135X wakelock</string>
    <string name="pref_wlan_wakelock">WLAN wakelock</string>
    <string name="pref_rx_wakelock">WLAN RX wakelock</string>
    <string name="pref_rx_wakelock_divider">WLAN RX wakelock divider</string>
    <string name="pref_ctrl_wakelock">WLAN CTRL wakelock</string>
    <string name="pref_msm_hsic_host_wakelock">MSM HSIC host wakelock</string>
    <string name="pref_msm_hsic_host_wakelock_divider">MSM HSIC host wakelock divider</string>
    <string name="category_info">Info</string>
    <string name="category_memory">Memory</string>
    <string name="category_battery">Battery</string>
    <string name="category_cpu">CPU</string>
    <string name="category_timestate">Time in state</string>
    <string name="legend_free_memory">Free mem</string>
    <string name="legend_used_memory">Used mem</string>
    <string name="legend_cached_memory">Cached mem</string>
    <string name="button_drop_caches">Drop caches</string>
    <string name="legend_capacity">Capacity</string>
    <string name="legend_health">Health</string>
    <string name="legend_status">Status</string>
    <string name="legend_charge_type">Charge type</string>
    <string name="legend_temp">Temperature</string>
    <string name="cpu_offline">Offline</string>
    <string name="idle">Idle</string>
    <string name="uptime">Up time: %1$s</string>
    <string name="info_kernel_version">Kernel version</string>
    <string name="info_cpu_architecture">CPU architecture</string>
    <string name="info_device">Device info</string>
    <string name="export_prof">Export profile</string>
    <string name="import_prof">Import profile</string>
    <string name="manipulate_prof">Manipulate profiles</string>
    <string name="save_profile">Save profile</string>
    <string name="load_profile">Load profile</string>
    <string name="export_to_sdcard">Export to SDCard</string>
    <string name="import_from_sdcard">Import from SDCard</string>
    <string name="delete_profile">Delete profile</string>
    <string name="clear_scripts">Clear app scripts</string>
    <string name="export_summary">Export and share with other users</string>
    <string name="save_summary">Backup current profile internally for later use. Works only on tabs you visited at least once.</string>
    <string name="import_summary">Import a profile created by another user</string>
    <string name="load_summary">Activate a profile you imported or saved earlier</string>
    <string name="delete_summary">Erase a profile you imported or saved earlier</string>
    <string name="clear_summary">Erase all scripts created by the app to set parameters on boot</string>
    <string name="settings_to_inc">Settings to include</string>
    <string name="profile_details">Profile details</string>
    <string name="device_name">Device -> %1$s</string>
    <string name="device">Device</string>
    <string name="kernel_version">Kernel -> %1$s</string>
    <string name="kernel">Kernel</string>
    <string name="date">Date</string>
    <string name="output_dir">Output directory</string>
    <string name="profile_name">Profile name</string>
    <string name="profile_author">Author</string>
    <string name="description">Description</string>
    <string name="required">(Required)</string>
    <string name="optional">(Optional)</string>
    <string name="you">You</string>
    <string name="message_action_successful">Action successful</string>
    <string name="message_action_unsuccessful">Error. Action unsuccessful</string>
    <string name="message_set_on_boot_enabled">Set on boot enabled</string>
    <string name="message_set_on_boot_disabled">Set on boot disabled</string>
    <string name="message_script_failed">Failed to write script</string>
    <string name="message_action_impossible1">Action impossible, use the app to tweak some parameters first then try again. Make sure to use the `Apply` button.</string>
    <string name="message_action_impossible2">You must select at least one to continue.</string>
    <string name="message_action_impossible3">Please fill all the required fields to continue</string>
    <string name="dialog_message_reqRoot">Requesting root access …</string>
    <string name="dialog_message_failRoot">Failed to get root access</string>
    <string name="dialog_message_bootScript">The boot script on /system/su.d needs to be installed or updated. Install it now?</string>
    <string name="dialog_message_installing">Installing …</string>
    <string name="dialog_message_fileExists">%1$s already exists, would you like to overwrite it?</string>
    <string name="dialog_title_fileExists">Overwrite file</string>
    <string name="dialog_pleaseWait">Please wait …</string>
    <string name="dialog_confirmation">Are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="cancel">Cancel</string>
    <string name="replace">Replace</string>
    <string name="update">Update</string>
    <string name="notification_message_settings_applied">Settings applied successfully.</string>
    <string name="notification_message_dirty_reboot">Dirty reboot detected. Press here to reapply previous settings.</string>
    <string name="button_install">Install</string>
    <string name="button_later">Later</string>
    <string name="note_unsupported_options">Some of the listed options might not work with your kernel.</string>
    <string name="note_adjust_carefully">Adjust carefully</string>
    <string name="note_missing_options">If an option you want is missing from this menu visit the related tab and hit apply at least once.</string>
    <string name="govTweaks">CPU Governor Tweaks</string>
</resources>