<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:clipChildren="false"
        android:clipToPadding="false">

        <LinearLayout
            android:id="@+id/cardHolder"
            style="@style/cardHolderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardBackgroundColor="@color/card_background"
                card_view:cardCornerRadius="4dp">

                <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.CardHeader
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:title="@string/export_prof">

                    <LinearLayout
                        style="@style/prefsHolderStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.PreferenceButton
                            android:id="@+id/exportBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:summary="@string/export_summary"
                            android:title="@string/export_to_sdcard"
                            android:value="none" />

                        <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.PreferenceButton
                            android:id="@+id/saveBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:animateLayoutChanges="true"
                            android:summary="@string/save_summary"
                            android:title="@string/save_profile"
                            android:value="none">

                            <LinearLayout
                                android:id="@+id/extraContent"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:padding="3dp"
                                android:visibility="gone">

                                <EditText
                                    android:id="@+id/newProfileName"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:ems="6"
                                    android:hint="@string/profile_name"
                                    android:scrollHorizontally="true"
                                    android:singleLine="true" />

                                <Button
                                    android:id="@+id/saveProfileBtn"
                                    style="?android:attr/buttonStyleSmall"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/button_save" />
                            </LinearLayout>
                        </lb.themike10452.hellscorekernelmanagerl.CustomWidgets.PreferenceButton>
                    </LinearLayout>
                </lb.themike10452.hellscorekernelmanagerl.CustomWidgets.CardHeader>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/intercard_margin"
                card_view:cardBackgroundColor="@color/card_background"
                card_view:cardCornerRadius="4dp">

                <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.CardHeader
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:title="@string/import_prof">

                    <LinearLayout
                        style="@style/prefsHolderStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.PreferenceButton
                            android:id="@+id/importBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:summary="@string/import_summary"
                            android:title="@string/import_from_sdcard"
                            android:value="none" />

                        <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.PreferenceButton
                            android:id="@+id/loadBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:summary="@string/load_summary"
                            android:title="@string/load_profile"
                            android:value="none" />
                    </LinearLayout>
                </lb.themike10452.hellscorekernelmanagerl.CustomWidgets.CardHeader>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/intercard_margin"
                card_view:cardBackgroundColor="@color/card_background"
                card_view:cardCornerRadius="4dp">

                <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.CardHeader
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:title="@string/manipulate_prof">

                    <LinearLayout
                        style="@style/prefsHolderStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.PreferenceButton
                            android:id="@+id/deleteBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:summary="@string/delete_summary"
                            android:title="@string/delete_profile"
                            android:value="none" />

                        <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.PreferenceButton
                            android:id="@+id/clearBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:summary="@string/clear_summary"
                            android:title="@string/clear_scripts"
                            android:value="none" />
                    </LinearLayout>
                </lb.themike10452.hellscorekernelmanagerl.CustomWidgets.CardHeader>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:id="@+id/overlayView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:animateLayoutChanges="true"
        android:background="@color/colorPrimary"
        android:clickable="false"
        android:visibility="invisible" />
</RelativeLayout>