<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_setOnBoot"
        android:actionLayout="@layout/actionbar_switch"
        android:showAsAction="always"
        android:title="@string/action_setOnBoot"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh_24px"
        android:showAsAction="always"
        android:title="@string/action_refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_apply"
        android:icon="@drawable/ic_accept"
        android:showAsAction="always"
        android:title="@string/action_apply"
        app:showAsAction="always" />
</menu>