<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/card_background"
    card_view:cardCornerRadius="4dp">

    <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.CardHeader
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/pref_category_general">

        <LinearLayout
            android:id="@+id/prefsHolder"
            style="@style/prefsHolderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.PreferenceButton
                android:id="@+id/ioschedulerBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/pref_io_scheduler" />

            <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.PreferenceButton
                android:id="@+id/readaheadBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/pref_read_ahead_buffer" />

            <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.PreferenceButton
                android:id="@+id/tcpcongestionBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/pref_tcp_congestion" />

            <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.PreferenceButton
                android:id="@+id/vibratorampBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/pref_vibrator_amp" />
        </LinearLayout>
    </lb.themike10452.hellscorekernelmanagerl.CustomWidgets.CardHeader>
</android.support.v7.widget.CardView>