<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardBackgroundColor="@color/card_background"
    card_view:cardCornerRadius="4dp">

    <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.CardHeader
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:title="@string/category_info">

        <LinearLayout
            android:id="@+id/prefsHolder"
            style="@style/prefsHolderStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.PreferenceButton
                android:id="@+id/kernelVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/info_kernel_version" />

            <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.PreferenceButton
                android:id="@+id/cpuArch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/info_cpu_architecture" />

            <lb.themike10452.hellscorekernelmanagerl.CustomWidgets.PreferenceButton
                android:id="@+id/deviceInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:title="@string/info_device" />
        </LinearLayout>
    </lb.themike10452.hellscorekernelmanagerl.CustomWidgets.CardHeader>
</android.support.v7.widget.CardView>